add `listStyle` instead of `listStyleType`
Co-authored-by: Adam Wathan <4323180+adamwathan@users.noreply.github.com>
Co-authored-by: Jordan Pittman <jordan@cryptica.me>

--- a/tests/basic-usage.oxide.test.css
+++ b/tests/basic-usage.oxide.test.css
@@ -402,11 +402,11 @@
 .scroll-p-6 {
   scroll-padding: 1.5rem;
 }
+.list-disc {
+  list-style: disc;
+}
 .list-inside {
   list-style-position: inside;
-}
-.list-disc {
-  list-style-type: disc;
 }
 .appearance-none {
   appearance: none;
