--- a/tests/arbitrary-values.oxide.test.css
+++ b/tests/arbitrary-values.oxide.test.css
@@ -406,10 +406,10 @@
   scroll-padding-top: var(--scroll-padding);
 }
 .list-\[\'\\1f44d\'\] {
-  list-style-type: "👍";
+  list-style: "👍";
 }
 .list-\[var\(--value\)\] {
-  list-style-type: var(--value);
+  list-style: var(--value);
 }
 .columns-\[20\] {
   columns: 20;
