--- a/tests/raw-content.test.css
+++ b/tests/raw-content.test.css
@@ -217,9 +217,7 @@
 }
 .rotate-3 {
   --tw-rotate: 3deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
-    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
-    scaleY(var(--tw-scale-y));
+  transform: rotate(var(--tw-rotate));
 }
 .skew-x-12 {
   --tw-skew-x: 12deg;
